# python-fastapi-tortoise

./: .gitlab-ci.yml  CLAUDE.md  cfg.yml  pyproject.toml  readme.md  ruff.toml  ty.toml
src/: app_module.py  config.py  main.py
src/call_api/: call_api_controller.py
src/example/: __init__.py  example_controller.py  example_module.py  example_service.py  test_example_service.py
src/example/dto/: __init__.py  create_example_dto.py  update_example_dto.py
src/example/entities/: __init__.py  example_entity.py
tests/: test_call_api.py  test_example_resource.py
tests/fixtures/: containers.py
